# copra-pid

./: CMakeLists.txt  README.md  license.txt
include/copra/copra/: AutoSpan.h  GUROBISolver.h.notavailable  LMPC.h  LSSOLSolver.h.notavailable  PreviewSystem.h  QLDSolver.h  QuadProgSolver.h  SolverInterface.h  api.h  constraints.h  costFunctions.h  debugUtils.h  solverUtils.h  typedefs.h
share/cmake/: copra_PID_Version.cmake
src/: CMakeLists.txt
src/copra/: AutoSpan.cpp  GUROBISolver.cpp.notavailable  LMPC.cpp  LSSOLSolver.cpp.notavailable  PreviewSystem.cpp  QLDSolver.cpp  QuadProgSolver.cpp  SolverInterface.cpp  constraints.cpp  costFunctions.cpp  debugUtils.cpp  solverUtils.cpp
src/pyCopra/: __init__.py  bindings.cpp
test/: CMakeLists.txt
test/copra/: TestLMPC.cpp  TestSolvers.cpp  systems.h  tools.h
test/pyCopra/: TestCopraBindings.py
